ghc-4335c07/testsuite/tests/deriving/should_fail/T7401_fail.hs
module T7401_fail where

data D deriving Eq
